Fix collapse with flex in document views

--- a/less/c2corg_ui.less
+++ b/less/c2corg_ui.less
@@ -887,6 +887,9 @@ ul {
   .associated-documents {
     width: 100%;
     .flex();
+    &.collapse:not(.in) {
+      display: none;
+    }
     flex-wrap: wrap;
 
     app-delete-association {
